Upgrade BookKeeper (4.14.1) and Netty (4.1.63)  (#192)
* Upgrade maven war-plugin and clean duplicate plugin declarations

* Upgrade to BK 4.14.1 and netty 4.1.63