@@ -176,6 +176,7 @@
                             <reuseForks>false</reuseForks>
                             <forkedProcessTimeoutInSeconds>180</forkedProcessTimeoutInSeconds>
                             <trimStackTrace>false</trimStackTrace>
+                            <argLine>--add-opens java.base/sun.security.x509=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED</argLine>
                         </configuration>
                     </plugin>            
                 </plugins>        
